Added the "build" tasks as a dependency to the "testbuild" task.